# EstimateSalary

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
handlers/: __init__.py  handler_utils.py  hh_handler.py  sj_handler.py
