[tool.poetry]
name = "estimatesalary"
version = "0.1.0"
description = ""
authors = ["spawlov <107248409+spawlov@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.28.1"
python-dotenv = "^1.0.1"
terminaltables = "^3.1.10"
aiofiles = "^24.1.0"
furl = "^2.1.3"
fake-useragent = "^2.0.3"


[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
skip_gitignore = true
order_by_type = false

[tool.flake8]
ignore = [
    'D100',  # Missing docstring in public module
    'D101',  # Missing docstring in public class
    'D102',  # Missing docstring in public method
    'D103',  # Missing docstring in public function
    'D104',  # Missing docstring in public package
    'D105',  # Missing docstring in magic method
    'D106',  # Missing docstring in public nested class
    'D107',  # Missing docstring in __init__
    'S101',
    'W503',  # Line break occurred before a binary operator, conflicts with W504:
             # https://github.com/mila-iqia/cookiecutter-pyml/issues/10
]
max-line-length = 120
max-complexity = 9
count = true
import-order-style = "edited"
