[tool.poetry]
name = "estimatesalary"
version = "0.1.0"
description = ""
authors = ["spawlov <107248409+spawlov@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.28.1"
python-dotenv = "^1.0.1"
terminaltables = "^3.1.10"
aiofiles = "^24.1.0"
furl = "^2.1.4"
fake-useragent = "^2.0.3"


[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
#check_untyped_defs = true
#ignore_errors = false
ignore_missing_imports = true
#warn_unused_ignores = true
#warn_redundant_casts = true
#warn_unused_configs = true

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
skip_gitignore = true
order_by_type = false

[tool.flake8]
max-line-length = 120
max-complexity = 7
count = true
import-order-style = "edited"
